# application.ai.snipimg_textdetection_demo

./: CMakeLists.txt  README.md  build_demos_msvc.bat
common/: CMakeLists.txt
common/include/: args_helper.hpp  common.hpp  ocv_common.hpp  shared_tensor_allocator.hpp  slog.hpp  utility.hpp
common/src/: args_helper.cpp  clipper.cpp  utility.cpp  w_dirent.hpp
ocr/: CMakeLists.txt  main.cpp  snipimg_text_detection_demo.hpp
ocr/include/: postprocess.hpp  ppocr.hpp  ppocr_det.hpp  ppocr_rec.hpp
ocr/models/en_PP-OCRv3_det_infer/xml/: inference.mapping  inference.xml
ocr/models/en_PP-OCRv3_rec_infer/xml/: inference.mapping  inference.xml
ocr/src/: postprocess.cpp  ppocr.cpp  ppocr_det.cpp  ppocr_rec.cpp
snip/: CMakeLists.txt
snip/include/: clipboard.hpp  snip_gui.hpp
snip/src/: clipboard.cpp  snip_gui.cpp
